[workspace]
resolver = "2"
members = [
    "canicula-kernel"
]

[workspace.dependencies]

[workspace.package]
version = "0.0.0"
authors = ["hanbings hanbings@hanbings.io"]
repository = "https://github.com/hanbings/canicula"
license = "MIT"

[profile.release]
debug = true
panic = "unwind"

[profile.dev]
debug = true
panic = "unwind"
