[workspace]
members = [
    "canicula-kernel",
    "hello-wasm",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["hanbings hanbings@hanbings.io"]
license = "MIT"
repository = "https://github.com/hanbings/canicula"

[workspace.dependencies]

[profile.dev]
debug = 2
panic = "unwind"

[profile.release]
debug = 2
panic = "unwind"
