[workspace]
resolver = "2"
members = [
    "canicula-common",
    "canicula-ext4",
    "canicula-kernel",
    "canicula-libs",
    "canicula-loader",
]

[workspace.dependencies]
# canicula internal crates
canicula-common = { path = "canicula-common" }
canicula-ext4 = { path = "canicula-ext4" }
canicula-libs = { path = "canicula-libs" }

# shared external deps (centralize versions)
noto-sans-mono-bitmap = "0.3.1"

[workspace.package]
version = "0.11.8"
edition = "2024"
authors = ["hanbings hanbings@hanbings.io"]
repository = "https://github.com/hanbings/canicula"
license = "MIT"

[profile.release]
debug = true
panic = "unwind"

[profile.dev]
debug = true
panic = "unwind"
