[package]
name = "canicula-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
name = "canicula_common"
path = "src/libs.rs"

[dependencies]
noto-sans-mono-bitmap = { workspace = true }

[target.x86_64-unknown-uefi.dependencies]
uefi = { version = "0.28.0", features = ["logger", "panic_handler"] }
arrayvec = { version = "0.7.2", default-features = false }

[target.aarch64-unknown-uefi.dependencies]

[target.x86_64-unknown-none.dependencies]
uefi = { version = "0.28.0", features = ["logger", "panic_handler"] }
arrayvec = { version = "0.7.2", default-features = false }

[target.aarch64-unknown-none.dependencies]

[target.riscv64gc-unknown-none-elf.dependencies]