[package]
name = "canicula-efi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canicula-efi"
path = "src/efi.rs"

[dependencies]
log = "0.4"
x86_64 = "0.15.2"
xmas-elf = "0.9.1"
uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }

canicula-common = { path = "../canicula-common" }