[package]
name = "canicula-efi"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rlibc = "1.0"
uefi = { version = "0.28.0", features = ["logger", "panic_handler"] }
uefi-services = { version = "0.25.0", optional = true }
x86_64 = "0.14.9"
xmas-elf = "0.8.0"
arrayvec = { version = "0.7.2", default-features = false }

[features]
rboot = ["uefi-services"]
default = ["rboot"]