[package]
name = "canicula-kernel"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "canicula-kernel"
path = "src/main.rs"

[dependencies]
log = "0.4"
xmas-elf = "0.10.0"
uefi = { version = "0.35.0", features = [ "panic_handler", "logger", "alloc", "global_allocator"] }
wasmi = { version = "0.47.0", default-features = false }
