[package]
name = "canicula-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
xmas-elf = "0.9.1"
uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }
canicula-common = { workspace = true }